@@ -37,6 +37,7 @@ version ?.??.?? (????-??-??):
   - www message type added [chilan]
   - lms-payments.php: monthly liability settlements support exact value calculations
     determined independently by number of days in each month [chilan]
+  - userpanel: added helpdesk reply notifications [chilan]
 
 version 1.11.14 (2013-03-25):
 
